@@ -78,13 +78,13 @@ cdl_package CYGPKG_DEVS_ETH_PHY {
            before giving up and declaring the link dead/missing."
     }
 
-    cdl_option CYGHWR_DEVS_ETH_PHY_DP83847 {
-        display       "NSDP83847"
+    cdl_option CYGHWR_DEVS_ETH_PHY_DP8384X {
+        display       "NSDP8384X"
         flavor        bool
         default_value 0
         compile       -library=libextras.a DP83847.c
         description "
-          Include support for National Semiconductor DP83847 DsPHYTER II"
+          Include support for National Semiconductor DP8384X DsPHYTER II"
     }
 
     cdl_option CYGHWR_DEVS_ETH_PHY_AM79C874 {
